hphp/hack/test/typecheck/lambda/lambda_arithmetic_bad.php.like_types.exp
File "lambda_arithmetic_bad.php", line 16, characters 23-35:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "lambda_arithmetic_bad.php", line 17, characters 23-35:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "lambda_arithmetic_bad.php", line 18, characters 23-35:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "lambda_arithmetic_bad.php", line 19, characters 25-43:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
